--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ sysinfo.txt
 *.unitypackage
 ProjectSettings/ProjectVersion.txt
 ProjectSettings/ProjectVersion.txt
+Assets/script/Data/UserData.json
