--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ sysinfo.txt
 ProjectSettings/ProjectVersion.txt
 ProjectSettings/ProjectVersion.txt
 Assets/script/Data/UserData.json
+.vs/App-unity-/v15/Server/sqlite3/storage.ide
